# dynamodb-toolbox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
src/: builder.rs  lib.rs  table.rs
